# volley

./: .npmignore  AGENTS.md  package.json
.github/workflows/: release.yml
apps/web/: package.json
apps/web/src/app/: layout.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/docs/install/: page.tsx
apps/web/src/components/: hero.tsx  sections.tsx  site-footer.tsx
crates/core/: Cargo.toml  index.js  package.json
docs/: README.md  architecture.md
scripts/: publish.sh  release.sh
