[package]
name = "lunge-core"
version = "1.0.9"
edition = "2021"
license = "MIT"
description = "Rust core engine for lunge (execution, protocols, assertions, token optimizer)"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "async"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "stream", "multipart"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde_json_path = "0.7"
regex = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
once_cell = "1"
jsonschema = { version = "0.47", default-features = false }

[build-dependencies]
napi-build = "2.3"

[profile.release]
lto = true
strip = "symbols"
